--- a/demos/dashboard/canvas-designer.html
+++ b/demos/dashboard/canvas-designer.html
@@ -156,7 +156,7 @@ hr {
 
 <article>
 
-<div id="widget-container" style="position: fixed;bottom: 0;right: 0;left: 20%;height: 100%;border: 1px solid black; border-top:0; border-bottom: 0;"></div>
+<div id="widget-container" style="display:none; position: fixed;bottom: 0;right: 0;left: 20%;height: 100%;border: 1px solid black; border-top:0; border-bottom: 0;"></div>
 <video id="screen-viewer" controls playsinline autoplay></video>
 
 <div style="width: 20%; height: 100%; position: absolute;left:0;">
