--- a/demos/dashboard/index.html
+++ b/demos/dashboard/index.html
@@ -15,7 +15,7 @@
   <script src="/demos/js/popper.min.js"></script>
   <script src="/demos/js/bootstrap.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/dist/RTCMultiConnection.min.js"></script>
+  <script src="/dist/RTCMultiConnection.js"></script>
 
 <style type="text/css">
 html, body, section, ul, li, nav, a, h1, h2 {
